# aejay-py

./: .tool-versions  README.md  build.sh  pyproject.toml  workspace.code-workspace
aejay-desktop-automations/: main.py  requirements.txt  run.ps1  setup.py  start.sh
aejay-desktop-automations/credential_management/: CredentialManager.py  Credentials.py  __init__.py
aejay-desktop-automations/screen_management/: Funkifier.py  FunkyState.py  MacFunkifier.py  WindowsFunkifier.py  __init__.py
aejay-desktop-automations/state_management/: ProductivityTask.py  RemoteState.py  StateManager.py  __init__.py
aejay-desktop-automations/ui/: MenuIcon.py  __init__.py
aejay_common/credential_management/: __init__.py  credentials.py
aejay_desktop_automations/: main.py  setup.py
aejay_desktop_automations/screen_management/: __init__.py  funkifier.py  funky_state.py  mac_funkifier.py  windows_funkifier.py
aejay_desktop_automations/state_management/: __init__.py  state_manager.py  state_records.py
aejay_desktop_automations/ui/: __init__.py  menu_icon.py
aejay_mac_headset_volume/: main.py
aejay_mac_media_updates/: main.py  requirements.txt  run.sh
typings/pystray/: __init__.pyi  _appindicator.pyi  _base.pyi  _darwin.pyi  _gtk.pyi  _win32.pyi  _xorg.pyi
typings/pystray/_util/: __init__.pyi  gtk.pyi  notify_dbus.pyi  win32.pyi
